--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.3",
     "next": "latest",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
