--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "type-check": "tsc"
   },
   "dependencies": {
-    "@types/styled-components": "^5.1.3",
     "next": "latest",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -18,6 +17,8 @@
     "@types/node": "^12.12.21",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
+    "@types/styled-components": "^5.1.3",
+    "babel-plugin-styled-components": "^1.11.1",
     "typescript": "4.0"
   },
   "license": "MIT"
