--- a/package.json
+++ b/package.json
@@ -38,8 +38,7 @@
   "lint-staged": {
     "*.{ts,tsx}": [
       "eslint",
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ]
   },
   "husky": {
