--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   "license": "MIT",
   "lint-staged": {
     "*.{ts,tsx}": [
-      "eslint",
+      "eslint --fix",
       "prettier --write"
     ]
   },
