--- a/.eslintrc
+++ b/.eslintrc
@@ -27,6 +27,7 @@
     ],
     "rules": {
         "prettier/prettier": ["error", {}, {" usePrettierrc": true }],
+        "no-console": "error",
         "react/prop-types": "off",
         "react/react-in-jsx-scope": "off",
         "jsx-a11y/anchor-is-valid": [
